# XE

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Invoke-Environment.ps1  LICENSE.txt  README.md  README.rst  Xenobuild  Xenobuild.json  Xenobuild.ps1  Xenobuild.yaml  appveyor.yml  ci-unix.sh  ci.sh  setup-unix-clang.sh  setup-unix-gcc.sh  setup-unix.sh  sonar-project.properties  vcpkg.json  xbcli  xenocli.py
dependencies/glad-es2/: CMakeLists.txt
examples/XE.Sandbox/: AssetManager.h  Asset_CGLTF.cpp  Asset_CGLTF.h  Assets.cpp  Assets.hpp  CMakeLists.txt  Common.h  Main.cpp  SandboxApp.cpp  SandboxApp.hpp  Scene.h
src/XE.Core/: CMakeLists.txt  XE.hpp
src/XE.Core/XE/: Buffer.cpp  Buffer.hpp  Core.cpp  Core.hpp  DataAttribute.cpp  DataAttribute.hpp  DataLayout.cpp  DataLayout.hpp  DataType.cpp  DataType.hpp  Event.hpp  EventImpl.hpp  FileStream.cpp  FileStream.hpp  Graphics.hpp  IO.hpp  Math.hpp  MemoryStream.cpp  MemoryStream.hpp  Predef.hpp  Stream.cpp  Stream.hpp  StreamSource.cpp  StreamSource.hpp  Structure.cpp  Structure.hpp
src/XE.Core/XE/Graphics/: BoxGenerator.cpp  BoxGenerator.hpp  BufferDescriptor.cpp  BufferDescriptor.hpp  EllipsoidGenerator.cpp  EllipsoidGenerator.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  IWindow.hpp  Image.cpp  Image.hpp  ImageImpl.cpp  ImageImpl.hpp  ImageLoader.cpp  ImageLoader.hpp  Material.cpp  Material.hpp  MeshSubset.cpp  MeshSubset.hpp  PixelFormat.cpp  PixelFormat.hpp  PlaneGenerator.cpp  PlaneGenerator.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  ShapeGenerator.hpp  Structure.cpp  Structure.hpp  Subset.cpp  Subset.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture2DArray.cpp  Texture2DArray.hpp  Texture3D.cpp  Texture3D.hpp  (+13 more)
src/XE.Core/XE/IO/: FileStream.cpp  FileStream.hpp  FileStreamSource.cpp  FileStreamSource.hpp  MemoryStream.cpp  MemoryStream.hpp  Stream.hpp  StreamSource.cpp  StreamSource.hpp
src/XE.Core/XE/Input/: DeviceStatus.cpp  DeviceStatus.hpp  InputCode.cpp  InputCode.hpp  InputManager.cpp  InputManager.hpp  InputState.cpp  InputState.hpp
src/XE.Core/XE/Math/: Boundary.cpp  Boundary.hpp  Box.cpp  Box.hpp  Common.cpp  Common.hpp  Ellipsoid.cpp  Ellipsoid.hpp  FormatUtils.hpp  Matrix.Test.cpp  Matrix.cpp  Matrix.hpp  Plane.cpp  Plane.hpp  Quaternion.cpp  Quaternion.hpp  Ray.cpp  Ray.hpp  Rect.hpp  Rotation.cpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Util.hpp  Vector.cpp  Vector.hpp
src/XE.Core/XE/Scene/: Projection.cpp  Projection.hpp  Trackball.cpp  Trackball.hpp  VirtualSphere.cpp  VirtualSphere.hpp
src/XE.Core/XE/UI/: Frame.cpp  Frame.hpp  WindowSystem.cpp  WindowSystem.hpp
src/XE.Core/XE/Util/: Timer.cpp  Timer.hpp
src/XE.Core/src/: Buffer.cpp  Core.cpp  DataType.cpp  Frame.cpp  Timer.cpp  WindowSystem.cpp
src/XE.FreeImage/: CMakeLists.txt
src/XE.Geometry/: CMakeLists.txt
src/XE.Geometry/src/: BoxGenerator.cpp  EllipsoidGenerator.cpp  ShapeGenerator.cpp
src/XE.Graphics/: CMakeLists.txt
src/XE.Graphics.D3D11.TestApp/: CMakeLists.txt
src/XE.Graphics.D3D11.TestApp/src/: Color.ps  Mesh.cpp  Mesh.h  Renderer.cpp  Shader.cpp  Shader.h  TestApp.cpp
src/XE.Graphics.ES2/: CMakeLists.txt
src/XE.Graphics.ES2/src/: BufferES2.cpp  Conversion.cpp  ConversionES.cpp  GraphicsDeviceES2.cpp  IGraphicsContextES2.cpp  ProgramES2.cpp  ShaderES2.cpp  SubsetES2.cpp  Texture2DES2.cpp  TextureBaseES2.cpp  TextureCubeMapES2.cpp  Util.cpp
src/XE.Graphics.GL/: CMakeLists.txt
src/XE.Graphics.GL.GLFW/: CMakeLists.txt
src/XE.Graphics.GL.GLFW/demo/: CMakeLists.txt  Common.h  Demo.cpp  Util.cpp
src/XE.Graphics.GL.GLFW/src/: GraphicsContextGLFW.cpp  InputManagerGLFW.cpp  WindowGLFW.cpp
src/XE.Graphics.GL/src/: BufferGL.cpp  Conversion.cpp  GraphicsDeviceGL.cpp  IGraphicsContextGL.cpp  ProgramGL.cpp  ShaderGL.cpp  SubsetGL.cpp  Texture2DArrayGL.cpp  Texture2DGL.cpp  Texture3DGL.cpp  TextureBaseGL.cpp  TextureCubeMapGL.cpp  Util.cpp
src/XE.Graphics.GL/unit-test/: XEGraphicsGLUnitTest.cpp
src/XE.Graphics.PNG/: CMakeLists.txt
src/XE.Graphics.PNG/src/: ImageLoaderPNG.cpp
src/XE.Graphics.Vk.TestApp/: CMakeLists.txt  Main.cpp
src/XE.Graphics/demo/: CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Demo.cpp  Renderable.h  SceneNode.cpp  SceneNode.h  Util.cpp
src/XE.Graphics/src/: BoxGenerator.cpp  EllipsoidGenerator.cpp  GraphicsDevice.cpp  GraphicsDeviceFactory.cpp  GraphicsManager.cpp  IWindow.cpp  Image.cpp  ImageImpl.cpp  ImageLoader.cpp  Material.cpp  PixelFormat.cpp  Program.cpp  Shader.cpp  ShapeGenerator.cpp  Subset.cpp  Texture.cpp  Texture2D.cpp  Texture2DArray.cpp  Texture3D.cpp  TextureCubeMap.cpp  VertexFormat.cpp  VertexLayout.cpp  Viewport.cpp
src/XE.IO/: CMakeLists.txt
src/XE.IO/src/: FileStream.cpp  FileStreamSource.cpp  MemoryStream.cpp  Stream.cpp  StreamSource.cpp
src/XE.Input/: CMakeLists.txt
src/XE.Input/src/: DeviceStatus.cpp  InputManager.cpp
src/XE.Math/: CMakeLists.txt
src/XE.Math/src/: FormatUtils.cpp  Rotation.cpp
src/XE.Math/test/: Box.Test.cpp  Common.Test.cpp  Common.h  Ellipsoid.Test.cpp  Matrix.Test.cpp  Plane.Test.cpp  Quaternion.Test.cpp  Range.Test.cpp  Ray.Test.cpp  Rect.Test.cpp  Rotation.Test.cpp  Sphere.Test.cpp  Triangle.Test.cpp  Vector.Test.cpp
src/XE.OpenGLCore/: CMakeLists.txt
src/XE.Scene/: CMakeLists.txt
src/XE.Scene/src/: Trackball.cpp  VirtualSphere.cpp
src/XE.Scene/test/: Projection.Test.cpp  Trackball.Test.cpp  VirtualSphere.Test.cpp
src/XE.Test/: CMakeLists.txt  Main.cpp
src/demos/sandbox/: .gitignore  Asset.h  Asset_CGLTF.h  CMakeLists.txt  README.md  Scene.h
src/engine/adapters/: CMakeLists.txt
src/engine/core/: CMakeLists.txt
src/engine/dependencies/: CMakeLists.txt
src/engine/geometry/: CMakeLists.txt
src/engine/math/: CMakeLists.txt
src/engine/scene/: CMakeLists.txt
src/glad-es2/: CMakeLists.txt
src/glad-es2/glad/: glad.c  glad_release.c.in
src/glad-gl4/: CMakeLists.txt
src/glad-gl4/glad/: glad.h  glad_debug.c.in  glad_debug.h
src/glad-gl4/src/: glad.c  glad_release.c.in
(+739 files in other folders)
